(build 2)
 * Adding new menu option to show a vegan/vegetarian message
 * More languages to come :D

- 2016.01.03 (build 1)

 * The Food Restriction goes Open Source (gpl3)
 * Graphical version of the user restrictions
 * Text version of the user restrictions
 * Starting with cow, chicken, pork, fish, cheese, milk and pepper
 * English and Portuguese-Brazil version
 * Show Icons/Show Texts/My Restricions/Settings/About