@@ -13,7 +13,7 @@
   <string name="nav_about_us">Sobre</string>
   <string name="food_msg_not_allergic">Eu não sou alérgico a nenhum tipo de comida</string>
   <string name="food_msg_not_picker">Eu não tenho frescura com comida</string>
-  <string name="cow">Vaca</string>
+  <string name="cow">Carne vermelha</string>
   <string name="chicken">Frango</string>
   <string name="pork">Porco</string>
   <string name="fish">Peixe</string>
